# EightFold

./: README.md
candidate-transformer/: .env.example  .gitignore  README.md  app.py  lint.py  pyproject.toml  regex_test.py  requirements.txt  validate_merge.py  validate_pipeline.py  validation_report.txt
candidate-transformer/config/: default.yaml  logging.yaml
candidate-transformer/demo_datasets/: tarun_recruiter.csv
candidate-transformer/docs/: application_scope.md
candidate-transformer/docs/adr/: 0001-plugin-architecture.md  0002-pipeline-context.md  0003-streamlit-ui.md
candidate-transformer/docs/architecture/: pipeline_spec.md
candidate-transformer/docs/domain/: candidate_domain_spec.md
candidate-transformer/output/: custom_output.json  default_output.json
candidate-transformer/sample_inputs/: arjun_ats.json  arjun_recruiter.csv  tarun_ats.json  tarun_resume.txt
candidate-transformer/src/: __init__.py  enums.py
candidate-transformer/src/adapters/: __init__.py  file_sources.py  registry.py  resume_parser.py
candidate-transformer/tests/: test_adapter_registry.py  test_agents.py  test_app_startup.py  test_candidate_processing_service.py  test_configuration_loader.py  test_csv_json_loaders.py  test_docx_loader.py  test_domain_models.py  test_enums.py  test_file_infrastructure.py  test_github_integration.py  test_interfaces.py  test_logger.py  test_pdf_loader.py  test_pipeline.py  test_pipeline_context.py  test_resume_parser.py  test_service_container.py  test_source_detection.py  test_stage_result.py  test_version.py
(+74 files in other folders)
